Added working dir and user to varnishd

--- a/spec/config/varnishd.yml
+++ b/spec/config/varnishd.yml
@@ -3,5 +3,7 @@ test:
   telnet: localhost:6082
   sbin_path: /usr/local/sbin
   storage: "file,#{Rails.root}/log/varnish,1GB"
+  working_dir: ""
+  user: "deploy"
   params:
     overflow_max: 2000
