--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,4 @@
-## MAC OS
-.DS_Store
-
-## TEXTMATE
-*.tmproj
-tmtags
-
-## EMACS
-*~
-\#*
-.\#*
-
-## VIM
-*.swp
-
-## PROJECT::GENERAL
-coverage
-rdoc
-pkg
-doc
-.yardoc
+*.gem
+.bundle
 Gemfile.lock
+pkg/*
