New option for starting varnishd with sudo.
Since low ports demands root, this allows an application
running with a simple user to start and stop varnishd.

--- a/lib/generators/lacquer/templates/varnishd.yml
+++ b/lib/generators/lacquer/templates/varnishd.yml
@@ -16,6 +16,7 @@ production:
   listen: :80
   telnet: localhost:6082
   backend: backend_server:8080
+  use_sudo: false
   sbin_path: /usr/local/sbin
   storage: "file,#{Rails.root}/log/varnishd.#{Rails.env}.cache,100MB"
   params:
